k8s/taconlavanda-site-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: taconlavanda-site-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      site: taconlavanda
  template:
    metadata:
      labels:
        site: taconlavanda
    spec:
      containers:
        - name: site
          image: mariogalaviz/taconlavanda-site
          ports:
          - containerPort: 3004
