k8s/taconlavanda-site-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: taconlavanda-site-cluster-ip-service
spec:
  type: ClusterIP
  ports:
    - port: 3004
      targetPort: 3004
  selector:
    site: taconlavanda
